feat(console): layout tuning + PTY e2e (br-1m6a.19, br-1m6a.15)
- Close br-1m6a.19: ConsoleLayoutState keybindings + writer settings unit tests
- Add PTY console E2E suite (default rich + persisted settings + optional interactive persistence)
- Make E2E temp dirs honor TMPDIR; ignore local .env/logs/artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,17 @@ _tmp_storage_root/
 # Misc build output
 a.out
 
+# Local env (developer machine / CI)
+.env
+
+# Local server logs
+agent-mail-server*.log
+
 # E2E test artifacts (generated per-run)
 tests/artifacts/
+
+# Crate-local test artifacts (generated per-run)
+crates/**/tests/artifacts/
 
 # bv (beads viewer) local config and caches
 .bv/
